# sam-selenium

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  template.yaml
sh/: build_package.sh  download_chrome.sh
src/: app.py
